# hatch-git-commit

./: README.md  pyproject.toml
hatch_git_commit/: __about__.py
